[package]
name = "royal_rust"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE.txt"
description = "A read-only TUI for royalroad, with a corrisponding API"
repository = "https://github.com/hfytr/royal_rust"
homepage = "https://github.com/hfytr/royal_rust"

[lib]
name = "royal_api"
path = "src/lib.rs"
crate-type = ["lib"]

[[bin]]
name = "rrtui"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12.5", features = ["blocking"] }
openssl = { version = "0.10", features = ["vendored"] }
select = "0.6.0"
ratatui = "0.27.0"
tui-big-text = "0.4.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.120"
itertools = "0.13.0"
chrono = "0.4.38"
dirs = "5.0.1"
